# pytest-nlp

./: .gitignore  MEDICAL_README.md  README.md  README.template.md  pyproject.toml
.github/workflows/: docs.yml
scripts/: generate-docs.sh  pre-commit  setup-hooks.sh
src/pytest_nlp/: __init__.py  amr.py  constituency.py  matchers.py  medical.py  models.py  plugin.py  semantic.py
tests/: conftest.py  test_amr.py  test_constituency.py  test_matchers.py  test_medical.py  test_medical_readme_examples.py  test_readme_examples.py  test_semantic.py
