[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-nlp"
version = "0.1.0"
description = "A pytest plugin for evaluating free-text outputs using NLP techniques"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Dimid Duchovny" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "pytest>=7.0",
    "sentence-transformers>=2.2",
    "spacy>=3.5",
    "stanza>=1.5",
    "torch",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[project.entry-points.pytest11]
nlp = "pytest_nlp.plugin"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_nlp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
nlp_embedding_model = "all-MiniLM-L6-v2"
nlp_spacy_model = "en_core_web_sm"
nlp_stanza_lang = "en"
nlp_similarity_threshold = "0.7"
nlp_similarity_metric = "cosine"

